Revise site description and add plugins
Updated description to include specific research areas and added plugins section.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,10 @@
 title: Anneke Slis
-description: Academic and Research Profile
+description: Speech Science | Motor Control | Dysarthria | Stuttering
 theme: jekyll-theme-minimal
 
+show_downloads: false
+
 markdown: kramdown
+
+plugins:
+  - jekyll-seo-tag
