--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Anneke Slis
 description: Speech Science | Motor Control | Dysarthria | Stuttering | EMA
-theme: jekyll-theme-minimal
+theme: jekyll-theme-cayman
 
 show_downloads: false
 
