--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: Anneke Slis
 description: Speech Science | Motor Control | Dysarthria | Stuttering | EMA
-theme: jekyll-theme-Alembic
+
+  remote_theme: daviddarnes/alembic
 
 show_downloads: false
 
@@ -8,3 +9,4 @@ markdown: kramdown
 
 plugins:
   - jekyll-seo-tag
+  - jekyll-remote-theme
