--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Anneke Slis
 description: Speech Science | Motor Control | Dysarthria | Stuttering | EMA
 
-  remote_theme: daviddarnes/alembic
+theme: jekyll-theme-cayman
 
 show_downloads: false
 
@@ -9,4 +9,4 @@ markdown: kramdown
 
 plugins:
   - jekyll-seo-tag
-  - jekyll-remote-theme
+
