--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Anneke Slis
 description: Speech Science | Motor Control | Dysarthria | Stuttering | EMA
 
-theme: jekyll-theme-cayman
+theme: jekyll-theme-minimal
 
 show_downloads: false
 
