--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Anneke Slis
 description: Speech Science | Motor Control | Dysarthria | Stuttering | EMA
-logo: /assets/images/_C1A9513.jpg
+logo: .github/workflows/assets/images/picture.jpg
 
 theme: jekyll-theme-minimal
 
