Add logo path to configuration

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Anneke Slis
 description: Speech Science | Motor Control | Dysarthria | Stuttering | EMA
-assets/images/picture.jpg
+logo: /assets/images/picture.jpg
 theme: jekyll-theme-minimal
 
 show_downloads: false
